# multiplayers-server

./: CMakeLists.txt
include/: client.h  cmd.h  parsemessage.h  tcpserver.h
src/: CMakeLists.txt  tcpserver.cpp
test/: CMakeLists.txt  client.cpp  testtcpserver.cpp
